<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    android:background="#123">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:id="@+id/main2img"/>
        </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/favourite"
            android:textColor="@color/colourtext"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"/>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="10dp">
        <com.github.ivbaranov.mfb.MaterialFavoriteButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:id="@+id/favbutton" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/Id"
            android:layout_marginLeft="10dp"
            android:textColor="@color/col"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Id"
            android:id="@+id/main2id"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colourtext"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/col"
            android:text="@string/Title"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/main2title"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colourtext"
            android:text="@string/Title"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/Vote_avg"
            android:textColor="@color/col"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/main2vote"
            android:textColor="@color/colourtext"
            android:text="@string/Vote_avg"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/col"
            android:text="@string/overview"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/main2overview"
            android:text="@string/overview"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colourtext"
            />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/releasedate"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/col"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/main2release"
            android:text="@string/releasedate"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colourtext"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/Review"
            android:textColor="@color/col"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:layout_marginTop="5dp"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/revrec">


        </android.support.v7.widget.RecyclerView>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/Trailer"
            android:layout_marginTop="5dp"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:textColor="@color/col"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trailerrec"
            >

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</ScrollView>